--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,7 +5,7 @@
   <%- include("./partials/nav.ejs") %>
 
   <div class="not-found content">
-    OOPS, page not found :)
+    OOPS, nenhuma página encontrada :)
   </div>
 
   <%- include("./partials/footer.ejs") %>
