--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,13 +6,13 @@
 
   <div class="create-blog content">
     <form action="/blogs" method="POST">
-      <label for="title">Blog title:</label>
+      <label for="title">Titulo da Notícia</label>
       <input type="text" id="title" name="title" required>
-      <label for="snippet">Blog snippet:</label>
+      <label for="snippet">Descrição:</label>
       <input type="text" id="snippet" name="snippet" required>
-      <label for="body">Blog body:</label>
+      <label for="body">Seu Texto:</label>
       <textarea id="body" name="body" required></textarea>
-      <button>Submit</button>
+      <button>Enviar</button>
     </form>
   </div>
 
