--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <%- include("./partials/nav.ejs") %>
 
   <div class="blogs content">
-    <h2>All Blogs</h2>
+    <h2>Todas as Notícias</h2>
 
     <% if (blogs.length > 0) { %>
       <% blogs.forEach(blog => { %>
@@ -15,7 +15,7 @@
         </a>
       <% }) %>
     <% } else { %>
-      <p>There are no blogs to display...</p>
+      <p>Ainda não existem noticias publicadas...</p>
     <% } %>
     
   </div>
