--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-  Copyright &copy; Blog Ninja 2020
+  <p> &copy; <%= new Date().getFullYear(); %> Smith • Desenvolvido com Express, NodeJs & MongoDB</p>
 </footer>
