--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,11 +1,11 @@
 <nav>
   <div class="site-title">
-    <a href="/"><h1>Blog Ninja</h1></a>
-    <p>A Net Ninja Site</p>
+    <a href="/"><h1>Noticias Web</h1></a>
+    <p>Site de Noticias Para Testes</p>
   </div>
   <ul>
-    <li><a href="/">Blogs</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/blogs/create">New Blog</a></li>
+    <li><a href="/">Noticias</a></li>
+    <li><a href="/about">Sobre</a></li>
+    <li><a href="/blogs/create">Publicar</a></li>
   </ul>
 </nav>
